// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates correct metadata for: dynamic route 1`] = `
{
  "canonical": undefined,
  "description": "View transaction 0x12345 on G7 Explorer",
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Game7 transaction 0x12345",
  },
  "title": "Game7 transaction 0x12345",
}
`;

exports[`generates correct metadata for: dynamic route with API data 1`] = `
{
  "canonical": undefined,
  "description": "0x12345, balances and analytics on the G7 Explorer",
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Game7 USDT token details",
  },
  "title": "Game7 USDT token details",
}
`;

exports[`generates correct metadata for: static route 1`] = `
{
  "canonical": "http://localhost:3000/txs",
  "description": "Discover the G7 Network with our blockchain explorer. Access real-time data on transactions, blocks, and smart contracts to stay informed on the network.",
  "opengraph": {
    "description": "",
    "imageUrl": "http://localhost:3000/static/og_placeholder.png",
    "title": "G7 Explorer",
  },
  "title": "G7 Explorer",
}
`;
